[package]
name = "stainless_minecraft"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
bincode = "1.3.3"
config = "0.11.0"
emoji = "0.2.1"
hex = "0.4.3"
indicatif = "0.17.0-beta.1"
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.131", features = ["derive"] }
sha2 = "0.10.0"
tokio = { version = "1.14.0", features = ["full"] }
