[package]
name = "nickel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
config = "0.12.0"
emoji = "0.2.1"
hex = "0.4.3"
indicatif = "0.17.0-rc.6"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["full"] }
